assets/css/main.css
* {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 15px;
  line-height: 1.4;
  color: #444;
  background-color: #fbfbfb;
}
@media (min-width: 568px) {
  body {
    font-size: 17px;
  }
}

a {
  color: #3c92d1;
  text-decoration: none;
}

.current a {
  font-weight: bold;
}

.button {
  background-color: #734f96;
  border: none;
  color: white;
  padding: 10px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 20px;
  border-radius: 8px;
}

.button.center {
  display: block;
  margin: 0 auto;
  width: fit-content;
}

.button:hover {
  background-color: #777;
  color: white;
  text-decoration: none;
}

.button.blue{
  background-color: #008CBA;
}

.button.blue:hover{
  background-color: #777;
}

#page-nav {
  padding-left: 20px;
}

h1,
h2,
h3 {
  font-family: 'Lato', sans-serif;
}

h1 {
  color: #734f96;
}

h2 {
  font-size: 24px;
  font-weight: 400;
  color: #734f96;
}
@media (min-width: 568px) {
  h2 {
    font-size: 30px;
  }
}
h3 {
  /* color: #54a23d; */
}

/* Mark new-window links */
a[target="_blank"]:after {
  content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
  margin: 0 3px 0 5px;
}

/* " except in the navbar and buttons*/
.navbar a[target="_blank"]:after {
  content:'';
  margin: 0px;
}
.button[target="_blank"]:after {
  content:'';
  margin: 0px;
}

.hidenewwindow[target="_blank"]:after {
  content:'';
  margin: 0px;
}

/* Hide text for social navbar icons 
    if not on mobile device*/
@media (min-width: 758px) {
  .navbar .icon-link{
    display: none;
  }
}

blockquote {
  border-left: 5px solid #eeeeee;
  margin-left: 0;
  padding-left: 15px;
}

blockquote small {
  display: block;
  font-size: 80%;
  line-height: 1.4;
}

blockquote small:before {
  content: '\2014 \00A0'
}

pre {
  overflow: auto;
  padding: 0.8rem;
  border-radius: 0.2rem;
  border: solid 1px rgba(0, 0, 0, 0.1);
  background-color: rgba(0, 0, 0, 0.05);
  white-space: pre-wrap;
}

.container {
  margin: 0 15px;
}
@media (min-width: 568px) {
  .container {
    margin: 0 auto;
    width: 90%;
    max-width: 1200px;
  }
}

.container-flex{
  margin: 0 auto;
  width: 90%;
  display: flex;
  flex-wrap: wrap;
}

.col-flex {
  /* display: table-cell; */
  flex: 45%;
  padding-left: 10px;
  vertical-align: top;
}

.col-flex.contributor {
  /* display: table-cell; */
  flex: 30%;
  margin: 10px;
  padding: 10px;
  vertical-align: top;
  border-radius: 10px;
  background-color: #fff;
}

@media screen and (max-width: 700px) {
  .col-flex {
    flex: 100%;
    flex-direction: column; 
  }
}

#navbar-logo {
    height: 3em;
}
.navbar-top-align {
    margin-top:1em;
}
  .col-half {
    display: table-cell;
    width: 50%;
    min-width: 50%;
    vertical-align: top;
  }
  .col-half.second {
    padding-left: 6%;
  }
.navbar-right .dropdown-menu {
    left: 0px;
}

.masthead {
  border-top: solid 1px #ececec;
  border-bottom: solid 1px #ececec;
  text-align: center;
  padding: 20px 12px;
}
@media (min-width: 568px) {
  .masthead {
    padding-top: 40px;
    padding-bottom: 40px;
  }
}

.masthead .container {
}
@media (min-width: 568px) {
  .masthead .container {
    width: 568px;
    margin: 0 auto;
  }
}

.masthead h1 {
  font-size: 20px;
  font-weight: 400;
}
@media (min-width: 568px) {
  .masthead h1 {
    font-size: 40px;
    margin-bottom: 20px;
  }
}

.masthead .lead {
  font-weight: 900;
  color: #54a23d;
  font-family: 'Lato', sans-serif;
  font-size: 16px;
  font-weight: 900;
}
@media (min-width: 568px) {
  .masthead .lead {
    font-size: 26px;
  }
}

.masthead .btn {
  margin-top: 0.5em;
}
@media (min-width: 568px) {
  .masthead .btn {  
    font-size: 20px;
  }
}

.col-wide,
.col-narrow {
  display: block;
  padding: 10px 0px;
}
@media (min-width: 568px) {
  .col-wide {
    display: table-cell;
    width: 61.8%;
    vertical-align: top;
  }
  .col-narrow {
    display: table-cell;
    width: 38.2%;
    padding-left: 6%;
    vertical-align: top;
  }
}

.col-right,
.col-fixed {
  display: block;
}

@media (min-width: 568px) {
  .col-right {
    /* display: table-cell; */
    width: 61.8%;
    vertical-align: top;
    margin-left: 380px;
    min-height: 500px;
  }
  .col-fixed {
    /* display: table-cell; */
    position: fixed;
    width: 350px;
    height: 500px;
    z-index: 1; /* Stay on top */
  }
  .col-fixed .content{
    overflow-y: auto;
    overflow-x: hidden;
    height: 90%;
    width: 100%;
  }
}


.front-section {
  padding: 8px 0;
}
@media (min-width: 568px) {
  .front-section {
    padding-top: 30px;
    padding-bottom: 30px;
    display: table;
    width: 100%;
  }
  .front-section h2:first-child {
    margin-top: 0;
  }
}

.front-section.shaded {
  background-color: #f4f4f4;
}

.front-section.shaded.purple {
  background-color: #f2eef6;
}


.faqs dt {
  font-weight: 700;
}

.faqs dd {
  color: #777;
  font-size: 15px;
  margin-left: 0;
  margin-bottom: 20px;
}

.faqs dd pre {
  font-size: 0.9rem;
}

.btn {
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background-color: #3c92d1;
  color: #fff;
  font-family: 'Lato', sans-serif;
  border-radius: 4px;
  padding: 15px 30px;
}

.btn:hover {
  background-color: #3889c4;
  color: white;
}

.btn.full-width {
  width: 100%;
}

.search-btn {
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  background-color: #3c92d1;
  color: #fff;
  font-family: 'Lato', sans-serif;
  border-radius: 4px;
  padding: 5px 7px;
}

.search-btn:hover {
  background-color: #3889c4;
  color: white;
}

.search-box {
  width: 85%;
  padding: 5px 7px;
  color: #777;
  font-weight: bold;
}


footer .container {
  border-top: solid 1px #ececec;
  padding: 20px 0 50px;
  font-size: 12px;
  color: #777;
}

footer .col-narrow {
  text-align: right;
}

@media (min-width: 568px) {
  footer .container {
    font-size: 14px;
    display: table;
  }
}

footer a {
  color: #444;
}


.light {
  color: #777;
}

.light a {
  color: #444;
}

.small {
  font-size: 70%;
}

.newsletter h1 {
  margin-bottom: 0px;
}

.aside-note {
  color: gray;
  /* border-left: 5px solid #734f96; */
  border-left: 5px solid gray;
  font-size: 16px;
  padding-left: 10px;
  margin: 20px 0;
}

.aside-tip {
  border-left: 5px solid #3c92d1;
  font-size: 16px;
  padding-left: 10px;
  margin: 20px 0;
}

.aside-important {
  border-left: 5px solid #c7254e;
  font-size: 16px;
  padding-left: 10px;
  margin: 20px 0;
  background-color: #f9f2f4;
}

.projects-table td{

  padding: 4px;

}

